# openbrep

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  config.example.toml  pyproject.toml
docs/: manual.md
docs/releases/: v0.5.3.md  v0.5.5.md
knowledge/: GDL_command_index.md
openbrep/: __init__.py  config.py  core.py  cross_script_checker.py  error_classifier.py  knowledge.py  llm.py  script_generator.py  static_checker.py  validator.py
tests/: test_error_classifier.py  test_llm.py  test_script_generator.py  test_static_checker.py
ui/: app.py
